grammar.js
    source_file: ($) =>
      // A `use` may sit anywhere among the items, which is what the compiler's parser accepts
      // and is worth keeping: `use Colour::*;` written directly under the enum it globs reads
      // better than the same line hoisted to the top away from what it refers to. A package
      // is one scope regardless of order, so nothing depends on where it went.
      seq(
        optional($.package_declaration),
        repeat(choice($.use_declaration, $._item)),
      ),

    // One token for both kinds. `/// what it does` is a *doc* comment — the compiler's item
    // lowering attaches it to the declaration below — and this grammar deliberately does not
    // split it out: a separate token would have to beat `//.*` in the lexer, and lexical
    // precedence in tree-sitter overrides longest match, which makes `//// a rule` a doc
    // comment followed by wreckage. The distinction is one character of prefix and belongs in
    // a query predicate, where it costs nothing to be exact.
    _item: ($) =>
      choice(
        $.attribute,
        $.function_item,
        $.struct_item,
        $.enum_item,
        $.trait_item,
        $.impl_item,
        $.elements_item,
        $.test_item,
        $.const_item,
        $.type_alias_item,
      ),

    // `test "adds two numbers" { 1 + 1 == 2 }` — the label is prose, so it is a string rather
    // than an identifier: it is read in a report, not called from anywhere.
    _modifiers: ($) => repeat1($._modifier),

    // `view` marks a function as emitting elements; `pure` marks it as reaching no ambient
    // authority. The compiler scans the run of modifiers and dispatches on what it ends at, so
    // any order of any subset parses and a repeat is a *diagnostic* rather than a parse error —
    // this mirrors that, rather than enumerating the orders.
    // A statement ends with its line, so a body-less declaration needs no `;` — and a `view`
    // may drop the `fn`: `view Card(title: Str) { .. }`. The keyword is optional after *any*
    // run of modifiers rather than only after `view`, because a run is one rule here; which
    // modifiers permit the omission is the compiler's business, and every item but a function
    // begins with its own keyword, so nothing else can follow a modifier and a name.
    function_item: ($) =>
      seq(
        optional($._modifiers),
        optional("fn"),
        // Either case. Identifier case is semantic here, so a name is ordinarily lowercase —
        // but a `view` may be capitalised, because a component is a thing rather than an action
        // and because `<Card/>` will need the capital to tell a component from a tag. The
        // compiler allows it only after `view`; accepting it here for any `fn` keeps this LR(1)
        // and leaves the restriction where the message is.
        field("name", choice($.identifier, $.type_identifier)),
        // Declared in angles only: a function names its variables by using them, and a paren
        // list after its name is its parameters.
        optional(field("type_parameters", alias($._angle_type_parameters, $.type_parameters))),
        field("parameters", $.parameter_list),
        optional(seq("->", field("return_type", $._type))),
        optional(field("where", $.where_clause)),
        // A body, or none. The second is what an `@intrinsic` declaration is: the runtime
        // supplies the body and the declaration supplies only the type.
        //
        // Accepted for *any* function, exactly as the compiler's parser accepts it, and for the
        // same reason — which declarations may go without a body is a question about the
        // attribute, and an attribute is the item's *sibling* rather than part of it. So neither
        // parser can tell from here, and the rule is stated where the answer is known.
        optional(field("body", choice($.block, ";"))),
      ),

    parameter_list: ($) =>
      seq("(", commaSep(choice($.self_parameter, $.parameter)), optional(","), ")"),

    // A bare `self`, which needs no annotation because the impl block says what it is.
    parameter: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq(":", field("type", $._type))),
        optional(seq("=", field("default", $._expression))),
      ),

    elements_item: ($) =>
      seq(
        optional($._modifiers),
        "elements",
        field("name", $.type_identifier),
        optional(seq(":", field("supertraits", $.bound_list))),
        "{",
        repeat(
          seq(
            choice(
              $.text_declaration,
              $.attrs_group,
              $.element_declaration,
              $.function_item,
              $.method_signature,
            ),
            optional(","),
          ),
        ),
        "}",
      ),

    // The marker saying this vocabulary admits character data. `text` and `element` are
    // contextual: the compiler matches them by spelling here and lexes them as ordinary
    // identifiers everywhere else, so neither is reserved.
    attrs_group: ($) =>
      seq("attrs", field("name", $.type_identifier), field("attributes", $.attribute_record)),

    element_declaration: ($) =>
      seq(
        "element",
        field("name", $._hyphenated_name),
        optional(seq(":", field("spec", $.element_spec))),
      ),

    // `Children`, an attribute record, or both joined by `&`.
    element_spec: ($) => sep1($._element_spec_part, "&"),

    _element_spec_part: ($) => choice($.type_identifier, $.attribute_record),

    attribute_record: ($) => seq("{", commaSep($.attribute_declaration), optional(","), "}"),

    // `class?: Str` is a field of type `Option<Str>`, generated the way anyone would write
    // it — the `?` is the whole of what optional means.
    attribute_declaration: ($) =>
      seq(field("name", $.attribute_name), optional("?"), ":", field("type", $._type)),

    // `class`, `aria-label`, `http-equiv`, `type` — an attribute's name as written.
    //
    // Not an `identifier`, and the two reasons are the same two the compiler gives. HTML's names
    // hold hyphens, and they collide with keywords: `<input type="text">` and `<label for="n">`
    // are most of a form, so accepting them was not optional. Both are unambiguous *here* and
    // nowhere else, because no expression can appear in attribute-name position — so a `-` between
    // two names can only be part of one.
    //
    // **One token, where the compiler keeps the run of tokens it lexed.** The compiler has to: its
    // tree reproduces its source byte for byte, and the field name is mangled from those tokens by
    // `attribute_field_name`. This grammar exists to highlight, and a name that is one thing should
    // be one colour — the alternative colours the hyphen of `aria-label` as an operator, which is
    // the bug that sent me here.
    //
    // A token rather than a rule is also what lets a keyword through. Tree-sitter extracts keywords
    // from the `word` token, so `type` becomes the `"type"` keyword only in a state where that
    // token is valid; in attribute-name position it is not, and this matches instead. Listing the
    // keywords here would be a second copy of a list the compiler already has, which is the way
    // this grammar has drifted before.
    //
    // The one thing the compiler accepts and this does not is `aria - label`, spaced — it is the
    // same attribute written strangely, and no file writes it.
    attribute_name: (_) => token(/[A-Za-z_][A-Za-z0-9_]*(-[A-Za-z_][A-Za-z0-9_]*)*/),

    // --- generics ----------------------------------------------------------------------

    // `(a, b)` is the spelling; `<T, U>` stays accepted until every file has moved. A variable
    // is a lowercase name, and need not be declared at all — a function names its own by
    // using them — which is what the `where` clause below bounds.
    type_parameters: ($) =>
      choice(
        $._angle_type_parameters,
        seq("(", commaSep1($.type_parameter), optional(","), ")"),
      ),

    // The declared form alone, for an `impl` head: `impl(t) ..` would read as a function type
    // standing for the trait, and an impl declares nothing in the new spelling — it names its
    // variables in the type and bounds them in `where`.
    _angle_type_parameters: ($) => seq("<", commaSep1($.type_parameter), optional(","), ">"),

    type_parameter: ($) =>
      seq(
        field("name", choice($.identifier, $.type_identifier)),
        optional(seq(":", field("bounds", $.bound_list))),
      ),

    // `where t: Ord, k: Hash + Eq` — after a signature or an impl head. A predicate is the
    // same node a declared parameter is, which is how the compiler merges the two by name.
    //
    // Right-associative so the list runs as far as the commas do: inside an `elements` block a
    // member may be followed by a comma of its own, and that one belongs to the block.
    bound_list: ($) => sep1($.bound, "+"),


    // `Iterator`, `html::Doc`, or `Iterator<Item = Int>` — a bound that also fixes one of the
    // trait's associated types. The angle brackets are free here because the language has no
    // generic traits, so an equation is the only thing that can stand in them.
    bound: ($) =>
      seq(
        optional(seq(field("package", $.identifier), "::")),
        field("name", $.type_identifier),
        optional(field("assoc", $.assoc_bindings)),
      ),

    _type: ($) => choice($.union_type, $._type_term),

    // `"get" | "post"`, `1 | 2 | 3` — a union of literal types.
    //
    // Members are literals of one base type, and that is a *checking* rule rather than a grammar
    // one: `Int | Str` parses here and is refused with a message pointing at `enum`, because
    // whether a member is a literal is a question about what a name resolved to.
    //
    // A `function_type`'s return is a `_type_term`, so `fn() -> A | B` reads as two members of one
    // union rather than as a function returning a union. Neither is more useful than the other — a
    // union member has to be a literal, so a function type can never be one.
    named_type: ($) =>
      seq(
        // Repeated, because a package path can be more than one segment deep:
        // `io::Conn`, `super::text::Slug`. `self` and `super` need no rule of their own
        // — `identifier` already matches them, and what makes one a root is where it sits.
        repeat(seq(field("qualifier", $._path_segment), "::")),
        field("name", choice($.type_identifier, $.identifier)),
        optional(field("type_arguments", $.type_arguments)),
      ),

    // `(Request) -> Response` — bare; the `fn` spelling stays accepted until every file has moved.
    block: ($) => seq("{", repeat($._statement), optional(field("tail", $._expression)), "}"),

    // A statement ends with its line, and a `;` is written only between two on one line. The
    // compiler reads the newline; this grammar makes the `;` optional and lets the automaton
    // settle where one statement ends — which differs from the compiler in exactly the cases
    // the reference calls out, a `(` or a `-` opening the next line, and in those it still
    // produces a tree rather than an error.
    _statement: ($) =>
      choice($.let_statement, $.use_statement, $.expression_statement),

    _expression: ($) =>
      choice(
        $.integer_literal,
        $.float_literal,
        $.string,
        $.char_literal,
        $.boolean_literal,
        $.identifier,
        // A nullary constructor used as a value — `Nil`, `Point`, `Red`. Uppercase, because
        // identifier case is what tells a constructor from a variable.
        $.type_identifier,
        $.path_expression,
        $.parenthesized_expression,
        $.unary_expression,
        $.binary_expression,
        $.call_expression,
        $.field_expression,
        $.try_expression,
        $.struct_literal,
        $.lambda_expression,
        $.element,
        $.if_expression,
        $.match_expression,
        $.loop_expression,
        $.for_expression,
        $.break_expression,
        $.continue_expression,
        $.return_expression,
        $.block,
      ),

    // `List::Cons`, `Array::new`, and `text::Found::One` — a package, then a type, then a
    // variant. The compiler puts no bound on the number of segments, so neither does this.
    _path_segment: ($) => choice($.type_identifier, $.identifier),

    call_expression: ($) =>
      prec(PREC.postfix, seq(field("function", $._expression), field("arguments", $.argument_list))),

    // `(a, name: b, other:, ..base)` — positional, then by name, then a constructor's base.
    // The order is the compiler's rule; here any mix parses, and that is a diagnostic there.
    argument_list: ($) =>
      seq(
        "(",
        commaSep(choice($._expression, $.labelled_argument, $.struct_base)),
        optional(","),
        ")",
      ),

    // `name: value`, or `name:` for the local of that name.
    if_expression: ($) =>
      prec.right(
        seq(
          "if",
          field("condition", $._expression),
          field("consequence", $.block),
          optional(seq("else", field("alternative", choice($.block, $.if_expression)))),
        ),
      ),

    // `match a, b { p, q => .. }` — several subjects without a tuple, one pattern each.
    element: ($) =>
      choice(
        seq(
          field("open", $.element_open),
          optional(field("children", $.element_children)),
          field("close", $.element_close),
        ),
        $.element_self_closing,
      ),

    // A lowercase name is a tag the vocabulary declares; an uppercase one is a **component** — a
    // `view` called here, whose attributes are its parameters. Identifier case is semantic in this
    // language, and this is the second place it decides a meaning rather than a colour.
    //
    // A lowercase tag may hold hyphens — `<sl-button>`, `<mj-section>` — which is what a web
    // component is called, and what MJML's elements are called. Written as a *sequence* rather
    // than as a token regex the way `attribute_name` is, because a token here would collide with
    // `identifier` and with `type_identifier` in the lexer — and, more to the point, because it is
    // what the compiler's parser does: the run is left flat rather than wrapped in a node of its
    // own, since nothing in tag position is an expression and the enclosing node is therefore
    // already enough to say a `-` here can only be continuing a name.
    _tag_name: ($) => choice($._hyphenated_name, $.type_identifier),

    _hyphenated_name: ($) => seq($.identifier, repeat(seq("-", $.identifier))),

    element_open: ($) => seq("<", field("name", $._tag_name), repeat($.element_attribute), ">"),

    element_self_closing: ($) =>
      seq("<", field("name", $._tag_name), repeat($.element_attribute), "/>"),

    element_close: ($) => seq("</", field("name", $._tag_name), ">"),

    // `class="card"`, `class={expr}`, or a bare `disabled`.
    //
    // **A bare attribute means `={true}`** — HTML's own boolean shorthand, and the one place a
    // name on its own has something to mean. This rule used to require the value and carried a
    // comment saying a bare name could not mean anything; `<input type="text" name="n" required/>`
    // is in the examples, so it did.
    element_attribute: ($) =>
      seq(
        field("name", $.attribute_name),
        optional(seq("=", field("value", choice($.string, $.element_value)))),
      ),

    element_value: ($) => seq("{", $._expression, "}"),

    element_children: ($) => repeat1(choice($.element_text, $.element_interpolation, $.element)),

    element_interpolation: ($) => seq("{", $._expression, "}"),

    // --- patterns ----------------------------------------------------------------------
